fixed image stretching

--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,10 @@ h2 {
 }
 
 .photo {
-  flex: 0 1 40%;
-  max-width: 300px;
+  flex: 1 1 40%;
+  max-width: 480px;
   margin-right: 2rem;
+  margin-bottom: 2rem;
 }
 
 .intro-contain {
@@ -282,6 +283,7 @@ ol.process {
 
   .menu-bar {
     flex-direction: column;
+
   }
 
   .menuButton {
